Fixed squishing issue with pictures, lined them up in a grid-column format, deleted unneeded figcaption and added it to the last picture,

--- a/screen.css
+++ b/screen.css
@@ -8,6 +8,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 /* Begin site styles below */
 html {
+  display: grid;
   font-size: 1.122em; /* 22 /18px */
   line-height: 1.22em; /* 22px / 18px*/
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -30,65 +31,57 @@ li {
   list-style-type: circle;
 }
 /* Dog Image css */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-gap: 3em; /* 54/18px */
+  grid-auto-rows: 2em /* 36/18px */
+}
 img {
-  display: block;
-  width: 25%;
-  height: 25%;
-  margin-left: auto;
-  margin-right: auto;
+display: block;
+max width: 100%;
+width: 100%;
+height: 100%;
 }
 .images {
-  background: #4d4d4d;
-  padding: 1em; /* 18 px*/
-}
-.images li {
-  box-sizing: border-box;
-  padding: 0.25em; /*4.5075 px /18 px*/
-  background: #4d4d4d;
+  display: grid;
+  grid-row: 1/2;
+  width: 50%;
+  height: 50%;
+  background: #666699;
+  overflow: auto;
+  padding: .50em; /* 9 px/ 18px */
 }
 .picture {
-  display: block;
-  padding: 1em; /* 18 px*/
-}
-figcaption {
-  clear: both;
+  display: grid;
+  grid-row: 1/2;
+  width: 40%;
+  height: 40%;
+  background: #666699;
+  overflow: auto;
+  padding: 1em; /*8px */
 }
 /*Media screen areas, px here only */
-@media screen and (min-width: 600px) {
-  .Images {
-    display: flex;
-    flex-flow: row-reverse;
-  }
-}
+@media all and (min-width: 500px) {
 .images li {
-  flex: 1 0 auto;
   float: left;
   width: 100%;
+  height: 75%;
 }
-figcaption {
-  clear: both;
+.images {
+  display: grid;
+  height: 500px;
+  width: 500px;
+  grid-template: repeat(2, auto);
 }
-@media screen and (min-width: 1000px) {
-  .images li {
-    width: 100%;
-  }
-  .images {
-    display: grid;
-    grid-template-rows: repeat(2, auto);
-    grid-template-rows: repeat(2, auto);
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
-  }
-  .image img {
-    object-fit: cover;
-    object-position: center center;
-    height: 100%;
-  }
-  .images li.focus {
-    background: black;
-    grid-row: 1 /2;
-  }
-  figcaption {
-    clear: both;
-  }
+}
+@media all and (min-width: 1000px) {
+.picture li {
+  width: 250px;
+  padding: 0 0 0 0;
+  height: 250px;
+}
+.images .picture {
+  justify-content: space-evenly;
+}
 }
